3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Fix exploit with alchemy spell. This effectively removes the improvement
implemented at 2006-03-07.
---
server/spell_effect.c: Use query_cost() to determine value of nuggets.
Andreas Kirschbaum 2006-03-22

Apply patch by Stefan Huehner: add const where appropriate.
---
Affected files: include/sockproto.h, socket/{loop.c,lowlevel.c}
Andreas Kirschbaum 2006-03-19

Use const when possible. Patch courtesy Stefan Huehner.
 common/item.c map.c porting.c readable.c shstr.c utils.c
 crossedit/Attr.c CrEdit.c
 include/global.h libproto.h
 random_maps/rproto.h treasure.c
 server/c_new.c commands.c
Ryo 2006-03-18

Removed unused header file version.h.
 include/version.h: removed.
 include/win32.h: don't include that file.
Ryo 2006-03-18

Add 'add_key' parameter to object.set_key for plugins.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfpython/cfpython_object.c
 server/plugins.c
Ryo 2006-03-18

Massive code cleanup. Changed FunctionsInCamelCase to conform to conventions.
Changed comments to doxygen syntax. Made function/variable/structure names more
 coherent.
There shouldn't be any functional change.
Modified files:
 common/anim.c image.c loader.[cl] object.c
 crossedit/xutil.c
 include/commands.h global.h libproto.h  newserver.h object.h player.h sockproto.h /sproto.h
 plugins/cfpython/cfpython.c
 server/apply.c attack.c c_misc.c commands.c init.c main.c move.c player.c plugins.c spell_effect.c time.c
 socket/image.c info.c init.c item.c loop.c request.c

Ryo 2006-03-18

Apply patch #1450408 (Improved hash table) by cf.schmorp.de development team.